Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="menu">
 <header id="header">
     <a id="logo" href="index.html"><img src="./img/iStock-506432952 (1).jpeg" alt=""></a>
-       </header>
+       </header>LOGO
 </div>
 </body>
 </html>
