--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul id="menu" role="menu">
                     <li><a class="linkmenu" href="index.html"> HOME</a>
                     <li><a class="linkmenu" href="produtos.html"> PRODUTOS</a>
-                    <li><a class="linkmenu" href="Observaçoes.html">OUVINTES</a>
+                    <li><a class="linkmenu" href="Observaçoes.html"> AVALIAÇOES</a>
                     <li><a class="linkmenu" href="contato.html"> CONTATO</a>
                     </ul>
             </nav>
@@ -31,28 +31,29 @@
     <!-- Início corousel página principal -->
     <div id="carouselExampleInterval" class="carousel slide"data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active"data-bs-interval="100">
+            <div class="carousel-item active"data-bs-interval="1600">
                 <img 
-                src="img/R.jpg"
+                src="./img/001.jpg"
                 class="d-block w-"
                 alt="..."
                 />
             </div>
-            <div class="carousel-item"data-bs-interval="100">
+            <div class="carousel-item"data-bs-interval="1600">
                 <img 
-                src="img/iStock-506432952 (1).jpeg"
+                src="./img/002.jpg"
                 class="d-block w-"
                 alt="..."
                 />
             </div>
-            <div class="carousel-item"data-bs-interval="100">
+            <div class="carousel-item"data-bs-interval="1600">
                 <img 
-                src="/img/photo-1521587760476-6c12a4b040da.jpg"
+                src="./img/003.jpg"
                 class="d-block w-"
                 alt="...">
                 
             </div>   
             <!-- Alt + Shift + Seta para baixo, copia contéudo -->
+            <!-- Alt + Shift >> Selecionando diversas e alterando o mesmo valor de forma simultanea -->
             <!-- Início controle carousel -->
             <button
                 class="carousel-control-prev"
@@ -73,9 +74,183 @@
                 <span class="visually-hidden">Next</span>                
             </button>
         </div>
-
+         <!-- controle caroussel -->
+         <!-- fim caroussel pagina principal-->
+         <!-- inicio banner -->
+    <div class="section-banner-home">
+        <div class="container-fluid">
+            <div class="row m-0">
+                <div class="col-12 col-md-6">
+                    <figure>
+                        <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="banner-home"> 
+                    </figure>
+                </div>
+                <div class="col-12 col-md-6">
+                    <section class="texto-banner d-home d-md-block">
+                        <h1>Venha conhecer os mais novos livros de todas as cartegorias!</h1>
+                        <p class="d-none d-md-block">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus nostrum corrupti assumenda cupiditate qui magni amet quae ea odio rem, voluptatum reiciendis id architecto in error adipisci nam, magnam maxime?</p>
+                        <a href="produto.html">Saiba Mais</a>
+                    </section>                    
+                </div>
+            <div>
+        </div>
     </div>
-    
+    <!-- fim banner -->
+    <!-- inicio detaque --> 
+    <div class="destaque">
+        <div class="container">
+            <div class=" row d-flex justify-content-center">
+                <!-- inicio da tag section do texto de destaque -->
+                <section class="col-12">
+                <h2>Que tal conheçer a nossa coleção de livros!</h2>              
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quidem placeat eum, quae enim totam deserunt itaque dolorem facere libero nam repellendus fugiat laudantium architecto animi qui! Cumque, maxime totam.?</p>
+                </section>
+                <!-- fim da tag section do texto de destaque -->
+                <!-- inicio imagem 1 -->
+            <div class="col-6 col-md-2 pr-0">
+                  <figure>
+                       <a href="produtos.html"><img src="./img/004.jpg"
+                        alt="figura-destaque"width=100%></a> 
+                        <figcaption>jogo <br> ano</figcaption> 
+                  </figure>
+                </div>
+                <!-- fim da imagem 1 -->
+                <!-- inicio imagem 2 -->
+            <div class="col-6 col-md-2 pr-0">
+                  <figure>
+                       <a href="produtos.html"><img src="./img/005.jpg"
+                        alt="figura-destaque"width=100%></a> 
+                        <figcaption>jogo <br> ano</figcaption> 
+                  </figure>
+                </div>
+                <!-- fim da imagem 2 -->
+                <!-- inicio imagem 3 -->
+            <div class="col-6 col-md-2 pr-0">
+                  <figure>
+                       <a href="produtos.html"><img src="./img/006.jpg"
+                        alt="figura-destaque"width=100%></a> 
+                        <figcaption>jogo <br> ano</figcaption> 
+                  </figure>
+                </div>
+                <!-- fim da imagem 3 -->
+                <!-- inicio imagem 4 -->
+            <div class="col-6 col-md-2 pr-0">
+                  <figure>
+                       <a href="produtos.html"><img src="./img/007.webp"
+                        alt="figura-destaque"width=100%></a> 
+                        <figcaption>jogo <br> ano</figcaption> 
+                  </figure>
+                </div>
+                <!-- fim da imagem 4 -->
+                <!-- Inicio Saiba Mais -->
+                <div class="col-12">
+                    <a href="#">Saiba Mais</a>
+                </div>
+                <!-- Fim Saiba Mais -->
+            </div>
+        </div>
+    </div>
+    <!-- Fim Destaque -->
+    <!-- Inicio do texto das novidades -->
+    <div class="novidades" id="novidades-mobile">
+    <div class="container-fluid">
+    <div class="row">
+    <div col-md-6>
+  <section class="text-body">
+     <h2>Conheça nosssas novidades</h2>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, eveniet ipsum harum tempore officia eum molestias inventore natus dolore iusto delectus error ad architecto vero similique, cumque in quod atque?   
+     <a class="bnt-banner" href="#" target="_blank">Saiba mais</a>
+     <section>
+     <div>  
+     <!-- Fim do texto novidades -->
+     <!-- Inicio da imagem noviades -->
+     <div class="col-md-6">
+     <figure>
+     </div>
+     <!-- fim da imagem novidades-->
+     </div>
+     </div>
+     </div>
+     <!-- inicio galerias -->
+    <div class=" galeria d-flex align-itens-center">
+        <div class="container">
+            <div class="row">
+                <!-- Inicio texto galerias -->
+                <div class="col-12">
+                    <section class="texto-galeria">
+                        <h2>Conheça nossos livros e audio-livros </h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam accusamus earum minima explicabo ratione, optio et illo aspernatur, itaque maxime numquam eos illum beatae. Veniam sapiente vel molestias totam sequi!</p>     
+                    </section>
+                </div>
+                <!-- Fim texto galeria -->
+                <!-- inicio imagem 1 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/livros e audio-livros capa/charles.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 1 da galeria -->
+                <!-- inicio imagem 2 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/livros e audio-livros capa/conte.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 2 da galeria -->
+                <!-- inicio imagem 3 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 3 da galeria -->
+                <!-- inicio imagem 4 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 4 da galeria -->
+                <!-- inicio imagem 5 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/livros e audio-livros capa/robert.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 5 da galeria -->
+                <!-- inicio imagem 6 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/livros e audio-livros capa/sun.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 6 da galeria -->
+                <!-- inicio imagem 7 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 7 da galeria -->
+                <!-- inicio imagem 8 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 8 da galeria -->
+                <!-- inicio imagem 9 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/livros e audio-livros capa/mark.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 9 da galeria -->
+                <!-- inicio imagem 10 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/livros e audio-livros capa/harv.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 10 da galeria -->
+                <!-- inicio imagem 11 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 11 da galeria -->
+                <!-- inicio imagem 12 da galeria -->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!-- Fim imgem 12 da galeria -->
+            </div>       
+        </div>
+    </div>
+    <!-- fim da galeria -->
+    <!-- inicio footer -->
+
+
+
 </body>
 
 <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js">
