update prj Forthebooks rev.4>06/052023

--- a/index.html
+++ b/index.html
@@ -6,46 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
     <title>Forthebooks</title>
 </head>
 <body>
     <!-- Aula 15/04/2023 -->
     <!-- Início Menu Responsivo -->
     <header id="header">
-            <a id="logo" href="index.html"><img src="./img/logo.png" alt="logo Forthebooks"></a>
-            <nav id="nav">
-                <button aria-label="abrir menu" id="bnt mobile" aria-haspopup="true" aria-controls="menu" aria aria-expanded="false">
-                    <span id="hamburguer"></span>
+        <a id="logo" href="index.html"><img src="./img/logo.png" alt="logo Forthebooks"></a>
+        <nav id="nav">
+                <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+                    <span id="hamburger"></span>
                 </button>
                 <ul id="menu" role="menu">
-                    <li><a class="linkmenu" href="index.html"> HOME</a>
-                    <li><a class="linkmenu" href="produtos.html"> PRODUTOS</a>
-                    <li><a class="linkmenu" href="Observaçoes.html"> AVALIAÇOES</a>
-                    <li><a class="linkmenu" href="contato.html"> CONTATO</a>
-                    </ul>
-            </nav>
+                  <li><a class="linkmenu" href="index.html"> HOME</a>
+                  <li><a class="linkmenu" href="Livros.html"> LIVROS</a>
+                  <li><a class="linkmenu" href="Audio-livros.html"> AUDIO-LIVROS</a>
+                  <li><a class="linkmenu" href="contato.html"> CONTATO</a>
+            </ul>
+        </nav>
     </header>
     <!-- Fim menu responsivo-->
 
     <!-- Início corousel página principal -->
     <div id="carouselExampleInterval" class="carousel slide"data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active"data-bs-interval="1600">
+            <div class="carousel-item active"data-bs-interval="1700">
                 <img 
                 src="./img/001.jpg"
                 class="d-block w-"
                 alt="..."
                 />
             </div>
-            <div class="carousel-item"data-bs-interval="1600">
+            <div class="carousel-item"data-bs-interval="1700">
                 <img 
                 src="./img/002.jpg"
                 class="d-block w-"
                 alt="..."
                 />
             </div>
-            <div class="carousel-item"data-bs-interval="1600">
+            <div class="carousel-item"data-bs-interval="1700">
                 <img 
                 src="./img/003.jpg"
                 class="d-block w-"
@@ -109,39 +109,30 @@
                 <!-- inicio imagem 1 -->
             <div class="col-6 col-md-2 pr-0">
                   <figure>
-                       <a href="produtos.html"><img src="./img/004.jpg"
-                        alt="figura-destaque"width=100%></a> 
-                        <figcaption>jogo <br> ano</figcaption> 
+                       <a href="produtos.html"><img src="./img/014.jpg"
+                        alt="figura-destaque"width=170%></a> 
+                        <figcaption>Livros <br> </figcaption> 
                   </figure>
                 </div>
                 <!-- fim da imagem 1 -->
                 <!-- inicio imagem 2 -->
             <div class="col-6 col-md-2 pr-0">
                   <figure>
-                       <a href="produtos.html"><img src="./img/005.jpg"
-                        alt="figura-destaque"width=100%></a> 
-                        <figcaption>jogo <br> ano</figcaption> 
+                       <a href="produtos.html"><img src="./img/014.jpg"
+                        alt="figura-destaque"width=170%></a> 
+                        <figcaption>Livros <br> </figcaption> 
                   </figure>
                 </div>
                 <!-- fim da imagem 2 -->
                 <!-- inicio imagem 3 -->
             <div class="col-6 col-md-2 pr-0">
                   <figure>
-                       <a href="produtos.html"><img src="./img/006.jpg"
-                        alt="figura-destaque"width=100%></a> 
-                        <figcaption>jogo <br> ano</figcaption> 
+                       <a href="produtos.html"><img src="./img/014.jpg"
+                        alt="figura-destaque"width=170%></a> 
+                        <figcaption>Livros <br> </figcaption> 
                   </figure>
                 </div>
                 <!-- fim da imagem 3 -->
-                <!-- inicio imagem 4 -->
-            <div class="col-6 col-md-2 pr-0">
-                  <figure>
-                       <a href="produtos.html"><img src="./img/007.webp"
-                        alt="figura-destaque"width=100%></a> 
-                        <figcaption>jogo <br> ano</figcaption> 
-                  </figure>
-                </div>
-                <!-- fim da imagem 4 -->
                 <!-- Inicio Saiba Mais -->
                 <div class="col-12">
                     <a href="#">Saiba Mais</a>
@@ -248,6 +239,49 @@
     </div>
     <!-- fim da galeria -->
     <!-- inicio footer -->
+<footer class="rodape">
+       <div class="container">
+            <div class="row m-0">
+              <!-- inicio logo -->
+            </div class="col-md-4">
+            <figure>
+              <img src="./img/logo.png" alt="logo_rodape" width="40%">
+            </figure>
+        </div>
+         <!-- fim logo -->
+         <!-- inicio texto -->
+        <div class="col-md-4">
+        <div class="info-contato">
+          <p>Email:</p>
+          <p>exemple@corp.net</p><br>
+          <p>Endereço:</p>
+          <p>Avenida ABC, 123</p><br>
+          <p>Telefone:</p>
+          <p>+55 (15) 5555-1234</p>
+    </div>
+        </div>
+        <!-- fim texto -->
+        <!-- inicio das midias sociais -->
+        <div class="col-md-4">
+            <figure class="redes-sociais">
+                <a href="#"><img src="./redes_sociais/face.png" alt="Facebook"></a>
+                <a href="#"><img src="./redes_sociais/insta.png" alt="Instagram"></a>
+                <a href="#"><img src="./redes_sociais/linkedin.png" alt="Linkedin"></a>
+                <a href="#"><img src="./redes_sociais/youtube.png" alt="Youtube"></a>
+            </figure>
+            <br>
+            <a href="home.html">Home</a>
+            <a href="livros.html">Livros</a>
+            <a href="audio-livros.html">Audio-livros</a>
+            <a href="contato.html">Contato</a>
+        </div>
+        <!-- fim midias sociais -->
+       </div>
+         <p class="direitos">direitos autorais</p>   
+       </div>
+    </div>
+</footer>
+    <!-- fim rodape -->
 
 
 
