update prj forthebooks rev .12 >27/05/2023

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     <span id="hamburger"></span>
                 </button>
                 <ul id="menu" role="menu">
-                  <li><a class="linkmenu" href="index.html"> HOME</a>
-                  <li><a class="linkmenu" href="Livros.html"> LIVROS</a>
-                  <li><a class="linkmenu" href="Audio-livros.html"> AUDIO-LIVROS</a>
+                  <li><a class="linkmenu" href="Index.html"> HOME</a>
+                  <li><a class="linkmenu" href="Produtos.html"> PRODUTOS</a>
+                  <li><a class="linkmenu" href="Streaming.html"> STREAMING</a>
                   <li><a class="linkmenu" href="contato.html"> CONTATO</a>
             </ul>
         </nav>
