update Forthebooks rev .1 >17/06/2023

--- a/index.html
+++ b/index.html
@@ -19,35 +19,34 @@
                     <span id="hamburger"></span>
                 </button>
                 <ul id="menu" role="menu">
-                  <li><a class="linkmenu" href="Index.html"> HOME</a>
-                  <li><a class="linkmenu" href="Produtos.html"> PRODUTOS</a>
-                  <li><a class="linkmenu" href="Streaming.html"> STREAMING</a>
+                  <li><a class="linkmenu" href="index.html"> HOME</a>
+                  <li><a class="linkmenu" href="produtos.html"> PRODUTOS</a>
+                  <li><a class="linkmenu" href="streaming.html"> #STREAMING</a>
                   <li><a class="linkmenu" href="contato.html"> CONTATO</a>
             </ul>
         </nav>
     </header>
     <!-- Fim menu responsivo-->
-
     <!-- Início corousel página principal -->
     <div id="carouselExampleInterval" class="carousel slide"data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active"data-bs-interval="1700">
                 <img 
-                src="./img/001.jpg"
+                src="./img/001C.jpg"
                 class="d-block w-"
                 alt="..."
                 />
             </div>
             <div class="carousel-item"data-bs-interval="1700">
                 <img 
-                src="./img/002.jpg"
+                src="./img/002C.jpg"
                 class="d-block w-"
                 alt="..."
                 />
             </div>
             <div class="carousel-item"data-bs-interval="1700">
                 <img 
-                src="./img/003.jpg"
+                src="./img/003C.jpg"
                 class="d-block w-"
                 alt="...">
                 
@@ -169,75 +168,42 @@
                 <!-- Inicio texto galerias -->
                 <div class="col-12">
                     <section class="texto-galeria">
-                        <h2>Conheça nossos livros e audio-livros </h2>
+                        <h2>Conheça nossos livros </h2>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam accusamus earum minima explicabo ratione, optio et illo aspernatur, itaque maxime numquam eos illum beatae. Veniam sapiente vel molestias totam sequi!</p>     
                     </section>
                 </div>
                 <!-- Fim texto galeria -->
                 <!-- inicio imagem 1 da galeria -->
                 <div class="gallery col-6 col-md-3">
-                    <img src="./img/livros e audio-livros capa/charles.jpg" class="img-fluid" alt="img-galeria">
+                    <img src="./img/livros e audio-livros capa/1984.jpg" class="img-fluid" alt="img-galeria">
                 </div>
                 <!-- Fim imgem 1 da galeria -->
                 <!-- inicio imagem 2 da galeria -->
                 <div class="gallery col-6 col-md-3">
-                    <img src="./img/livros e audio-livros capa/conte.jpg" class="img-fluid" alt="img-galeria">
+                    <img src="./img/livros e audio-livros capa/iluminado.jpg" class="img-fluid" alt="img-galeria">
                 </div>
                 <!-- Fim imgem 2 da galeria -->
                 <!-- inicio imagem 3 da galeria -->
                 <div class="gallery col-6 col-md-3">
-                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
+                    <img src="./img/livros e audio-livros capa/psicose.jpg" class="img-fluid" alt="img-galeria">
                 </div>
                 <!-- Fim imgem 3 da galeria -->
                 <!-- inicio imagem 4 da galeria -->
                 <div class="gallery col-6 col-md-3">
-                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
+                    <img src="./img/livros e audio-livros capa/terra.jpg" class="img-fluid" alt="img-galeria">
                 </div>
                 <!-- Fim imgem 4 da galeria -->
-                <!-- inicio imagem 5 da galeria -->
-                <div class="gallery col-6 col-md-3">
-                    <img src="./img/livros e audio-livros capa/robert.jpg" class="img-fluid" alt="img-galeria">
-                </div>
-                <!-- Fim imgem 5 da galeria -->
-                <!-- inicio imagem 6 da galeria -->
-                <div class="gallery col-6 col-md-3">
-                    <img src="./img/livros e audio-livros capa/sun.jpg" class="img-fluid" alt="img-galeria">
-                </div>
-                <!-- Fim imgem 6 da galeria -->
-                <!-- inicio imagem 7 da galeria -->
-                <div class="gallery col-6 col-md-3">
-                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
-                </div>
-                <!-- Fim imgem 7 da galeria -->
-                <!-- inicio imagem 8 da galeria -->
-                <div class="gallery col-6 col-md-3">
-                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
-                </div>
-                <!-- Fim imgem 8 da galeria -->
-                <!-- inicio imagem 9 da galeria -->
-                <div class="gallery col-6 col-md-3">
-                    <img src="./img/livros e audio-livros capa/mark.jpg" class="img-fluid" alt="img-galeria">
-                </div>
-                <!-- Fim imgem 9 da galeria -->
-                <!-- inicio imagem 10 da galeria -->
-                <div class="gallery col-6 col-md-3">
-                    <img src="./img/livros e audio-livros capa/harv.jpg" class="img-fluid" alt="img-galeria">
-                </div>
-                <!-- Fim imgem 10 da galeria -->
-                <!-- inicio imagem 11 da galeria -->
-                <div class="gallery col-6 col-md-3">
-                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
-                </div>
-                <!-- Fim imgem 11 da galeria -->
-                <!-- inicio imagem 12 da galeria -->
-                <div class="gallery col-6 col-md-3">
-                    <img src="./img/banner_cbl-ofy0fbs0068fhrj9tp76jt6mwa3q3modv5tpouj6kw.jpg" class="img-fluid" alt="img-galeria">
-                </div>
-                <!-- Fim imgem 12 da galeria -->
             </div>       
         </div>
     </div>
     <!-- fim da galeria -->
+    <!-- Início Whatsapp -->
+    <div class="whatsapp">
+        <div class="container-grid logo-whats">
+          <a target="_blank" href="https://api.whatsapp.com/send?phone=5515996950141&text=Ol%C3%A1,%20estava%20no%20site%20photos%20of%20all%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es."><img src="./redes_sociais/whats.png" class="quica" alt="Contato Whatsapp"></a> 
+        </div>
+      </div>
+    <!-- Fim Whatsapp -->
     <!-- inicio footer -->
 <footer class="rodape">
     <div class="container">
@@ -271,15 +237,14 @@
                 </figure>
                 <br>
                 <a href="home.html">Home</a>
-                <a href="livros.html">Livros</a>
-                <a href="audio-livros.html">Audio-livros</a>
+                <a href="produtos.html">Produtos</a>
+                <a href="streaming.html">Streaming</a>
                 <a href="contato.html">Contato</a>
             </div>
             <!-- fim midias sociais -->
             <div class="col-12">
             <p class="direitos">direitos autorais</p>   
-            </div>
-        <
+       </div>
     </div>
 </footer>
     <!-- fim rodape -->
